--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -16,8 +16,8 @@
   <widget class="QLineEdit" name="AccountEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>80</y>
+     <x>140</x>
+     <y>70</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -26,8 +26,8 @@
   <widget class="QLineEdit" name="PasswordEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>130</y>
+     <x>140</x>
+     <y>110</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -36,8 +36,8 @@
   <widget class="QPushButton" name="regBtn">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>177</y>
+     <x>80</x>
+     <y>200</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -49,6 +49,34 @@
    </property>
    <property name="text">
     <string>注册</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="backBtn">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>200</y>
+     <width>91</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>返回</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="RePasswordEdit">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>150</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
    </property>
   </widget>
  </widget>
