--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>550</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,36 +16,50 @@
   <widget class="QLineEdit" name="AccountEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>70</y>
-     <width>113</width>
-     <height>20</height>
+     <x>180</x>
+     <y>130</y>
+     <width>250</width>
+     <height>30</height>
     </rect>
+   </property>
+   <property name="placeholderText">
+    <string>请输入账号</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="PasswordEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>110</y>
-     <width>113</width>
-     <height>20</height>
+     <x>180</x>
+     <y>190</y>
+     <width>250</width>
+     <height>30</height>
     </rect>
+   </property>
+   <property name="placeholderText">
+    <string>请输入密码</string>
    </property>
   </widget>
   <widget class="QPushButton" name="regBtn">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>200</y>
-     <width>91</width>
-     <height>41</height>
+     <x>170</x>
+     <y>310</y>
+     <width>100</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>20</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: white;
+    color: black;
+    border: 1px solid #ababab;
+    border-radius: 12px;
+}</string>
    </property>
    <property name="text">
     <string>注册</string>
@@ -54,16 +68,24 @@
   <widget class="QPushButton" name="backBtn">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>200</y>
-     <width>91</width>
-     <height>41</height>
+     <x>300</x>
+     <y>310</y>
+     <width>100</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>20</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: white;
+    color: black;
+    border: 1px solid #ababab;
+    border-radius: 12px;
+}</string>
    </property>
    <property name="text">
     <string>返回</string>
@@ -72,14 +94,143 @@
   <widget class="QLineEdit" name="RePasswordEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>150</y>
-     <width>113</width>
-     <height>20</height>
+     <x>180</x>
+     <y>250</y>
+     <width>250</width>
+     <height>30</height>
     </rect>
    </property>
+   <property name="placeholderText">
+    <string>请再次输入密码</string>
+   </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>60</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>用户注册</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="repasswordlabel_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>550</width>
+     <height>400</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="figures.qrc">:/img/source/figures/background.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="registerlabel">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>55</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="figures.qrc">:/img/source/figures/register.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="accountlabel">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>130</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="figures.qrc">:/img/source/figures/account.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="passwordlabel">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>190</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="figures.qrc">:/img/source/figures/password.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="repasswordlabel">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>250</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="figures.qrc">:/img/source/figures/repassword.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <zorder>repasswordlabel_2</zorder>
+  <zorder>AccountEdit</zorder>
+  <zorder>PasswordEdit</zorder>
+  <zorder>regBtn</zorder>
+  <zorder>backBtn</zorder>
+  <zorder>RePasswordEdit</zorder>
+  <zorder>label</zorder>
+  <zorder>registerlabel</zorder>
+  <zorder>accountlabel</zorder>
+  <zorder>passwordlabel</zorder>
+  <zorder>repasswordlabel</zorder>
  </widget>
- <resources/>
+ <resources>
+  <include location="figures.qrc"/>
+ </resources>
  <connections/>
 </ui>
