--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -35,6 +35,9 @@
      <height>30</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
    <property name="placeholderText">
     <string>请输入密码</string>
    </property>
@@ -99,6 +102,9 @@
      <width>250</width>
      <height>30</height>
     </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
    </property>
    <property name="placeholderText">
     <string>请再次输入密码</string>
