--- a/LoginDlg.ui
+++ b/LoginDlg.ui
@@ -10,6 +10,18 @@
     <height>400</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>550</width>
+    <height>400</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>550</width>
+    <height>400</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>登录</string>
   </property>
@@ -40,7 +52,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>150</x>
      <y>70</y>
      <width>270</width>
      <height>35</height>
@@ -87,7 +99,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>190</y>
+     <y>200</y>
      <width>250</width>
      <height>35</height>
     </rect>
@@ -114,27 +126,27 @@
   <widget class="QPushButton" name="regBtn">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>270</y>
-     <width>100</width>
-     <height>40</height>
+     <x>290</x>
+     <y>260</y>
+     <width>90</width>
+     <height>36</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
-     <width>100</width>
-     <height>40</height>
+     <width>0</width>
+     <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>100</width>
-     <height>40</height>
+     <width>16777215</width>
+     <height>16777215</height>
     </size>
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -155,27 +167,27 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>270</y>
-     <width>100</width>
-     <height>40</height>
+     <x>170</x>
+     <y>260</y>
+     <width>90</width>
+     <height>36</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
-     <width>100</width>
-     <height>40</height>
+     <width>0</width>
+     <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>100</width>
-     <height>40</height>
+     <width>16777215</width>
+     <height>16777215</height>
     </size>
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -213,7 +225,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>130</y>
+     <y>125</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -232,7 +244,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>190</y>
+     <y>195</y>
      <width>40</width>
      <height>40</height>
     </rect>
