--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -10,13 +10,25 @@
     <height>400</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>550</width>
+    <height>400</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>550</width>
+    <height>400</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <widget class="QLineEdit" name="AccountEdit">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>160</x>
      <y>130</y>
      <width>250</width>
      <height>30</height>
@@ -29,7 +41,7 @@
   <widget class="QLineEdit" name="PasswordEdit">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>160</x>
      <y>190</y>
      <width>250</width>
      <height>30</height>
@@ -47,13 +59,13 @@
     <rect>
      <x>170</x>
      <y>310</y>
-     <width>100</width>
-     <height>40</height>
+     <width>90</width>
+     <height>36</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -71,15 +83,15 @@
   <widget class="QPushButton" name="backBtn">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>290</x>
      <y>310</y>
-     <width>100</width>
-     <height>40</height>
+     <width>90</width>
+     <height>36</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -97,7 +109,7 @@
   <widget class="QLineEdit" name="RePasswordEdit">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>160</x>
      <y>250</y>
      <width>250</width>
      <height>30</height>
@@ -113,8 +125,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>60</y>
+     <x>240</x>
+     <y>70</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -128,7 +140,7 @@
     <string>用户注册</string>
    </property>
   </widget>
-  <widget class="QLabel" name="repasswordlabel_2">
+  <widget class="QLabel" name="bglabel">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -151,7 +163,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>55</y>
+     <y>65</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -169,8 +181,8 @@
   <widget class="QLabel" name="accountlabel">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>130</y>
+     <x>110</x>
+     <y>125</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -188,8 +200,8 @@
   <widget class="QLabel" name="passwordlabel">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>190</y>
+     <x>110</x>
+     <y>185</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -207,8 +219,8 @@
   <widget class="QLabel" name="repasswordlabel">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>250</y>
+     <x>110</x>
+     <y>245</y>
      <width>40</width>
      <height>40</height>
     </rect>
@@ -223,7 +235,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <zorder>repasswordlabel_2</zorder>
+  <zorder>bglabel</zorder>
   <zorder>AccountEdit</zorder>
   <zorder>PasswordEdit</zorder>
   <zorder>regBtn</zorder>
