--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -119,7 +119,7 @@
      </widget>
     </widget>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="flightQueryBtn">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -137,7 +137,7 @@
      <string>航班查询</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="personalCenterBtn">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -155,7 +155,7 @@
      <string>个人中心</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="myFavoritesBtn">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -173,7 +173,7 @@
      <string>我的收藏</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="myOrdersBtn">
     <property name="geometry">
      <rect>
       <x>30</x>
