--- a/figures.qrc
+++ b/figures.qrc
@@ -6,5 +6,11 @@
         <file>source/figures/plane.png</file>
         <file>source/figures/register.png</file>
         <file>source/figures/repassword.png</file>
+        <file>source/figures/gender1.png</file>
+        <file>source/figures/gender2.png</file>
+        <file>source/figures/flightschedule.png</file>
+        <file>source/figures/shopcar.png</file>
+        <file>source/figures/star.png</file>
+        <file>source/figures/personal_Info.png</file>
     </qresource>
 </RCC>
