--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -750,7 +750,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>source/figures/flightschedule.png</pixmap>
+     <pixmap resource="figures.qrc">:/img/source/figures/flightschedule.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -769,7 +769,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>source/figures/shopcar.png</pixmap>
+     <pixmap resource="figures.qrc">:/img/source/figures/shopcar.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -788,7 +788,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>source/figures/star.png</pixmap>
+     <pixmap resource="figures.qrc">:/img/source/figures/star.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -807,7 +807,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>source/figures/personal_Info.png</pixmap>
+     <pixmap resource="figures.qrc">:/img/source/figures/personal_Info.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
