新增：更新用户主界面page1

--- a/figures.qrc
+++ b/figures.qrc
@@ -16,5 +16,7 @@
         <file>source/figures/orderView.png</file>
         <file>source/figures/userManagement.png</file>
         <file>source/figures/dataStatistics.png</file>
+        <file>source/figures/capitalLogo.png</file>
+        <file>source/figures/arrow.png</file>
     </qresource>
 </RCC>
