新增：更多头像，排版紧凑

--- a/avatars.qrc
+++ b/avatars.qrc
@@ -10,5 +10,10 @@
         <file>source/avatars/avatar_8.png</file>
         <file>source/avatars/avatar_9.png</file>
         <file>source/avatars/avatar_10.png</file>
+        <file>source/avatars/avatar_11.png</file>
+        <file>source/avatars/avatar_12.png</file>
+        <file>source/avatars/avatar_13.png</file>
+        <file>source/avatars/avatar_14.png</file>
+        <file>source/avatars/avatar_15.png</file>
     </qresource>
 </RCC>
