--- a/figures.qrc
+++ b/figures.qrc
@@ -12,6 +12,8 @@
         <file>source/figures/personalCenter.png</file>
         <file>source/figures/male.png</file>
         <file>source/figures/female.png</file>
+        <file>source/figures/pwdLock.png</file>
+        <file>source/figures/logout.png</file>
         <file>source/figures/flightManagement.png</file>
         <file>source/figures/orderView.png</file>
         <file>source/figures/userManagement.png</file>
