--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -73,9 +73,9 @@
    <widget class="QPushButton" name="backBtn">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>590</x>
       <y>10</y>
-      <width>80</width>
+      <width>90</width>
       <height>30</height>
      </rect>
     </property>
@@ -86,6 +86,16 @@
     </property>
     <property name="text">
      <string>退出登录</string>
+    </property>
+    <property name="icon">
+     <iconset resource="figures.qrc">
+      <normaloff>:/img/source/figures/logout.png</normaloff>:/img/source/figures/logout.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>18</width>
+      <height>18</height>
+     </size>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox">
@@ -105,6 +115,10 @@
     <item>
      <property name="text">
       <string>修改密码</string>
+     </property>
+     <property name="icon">
+      <iconset resource="figures.qrc">
+       <normaloff>:/img/source/figures/pwdLock.png</normaloff>:/img/source/figures/pwdLock.png</iconset>
      </property>
     </item>
     <item>
@@ -277,7 +291,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
